# trigout

./: Cargo.toml  README.md
src/: format.rs  lib.rs
tests/: test_format.rs  test_socket_name.rs
