[package]
name = "trigout"
version = "0.0.1"
authors = ["DevHyperCoder <arduinoleo88@gmail.com>"]
edition = "2018"
description = "Trigger based formatter"
readme = "README.md"
repository = "https://github.com/DevHyperCoder/trigout"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.0"
regex = "1.0"
substring = "1.4.5"
home = "0.5.3"
